[gd_scene load_steps=24 format=3 uid="uid://caidk88pdjqnf"]

[ext_resource type="Script" uid="uid://blmxrsvuffmji" path="res://Scenes/Enemies/charger.gd" id="1_nou43"]
[ext_resource type="Texture2D" uid="uid://li8kvluh6kyu" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzh0.png" id="2_wndrn"]
[ext_resource type="Texture2D" uid="uid://bj378aquo7ock" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzi0.png" id="3_5l1w1"]
[ext_resource type="Texture2D" uid="uid://cdripjyw5wodu" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzj0.png" id="4_iofpq"]
[ext_resource type="Texture2D" uid="uid://dhbc2id7csxjh" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzk0.png" id="5_lt2cq"]
[ext_resource type="Texture2D" uid="uid://c4gnfmuuy105e" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzl0.png" id="6_6hfek"]
[ext_resource type="Texture2D" uid="uid://c3s3xurx3txl8" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzm0.png" id="7_saubl"]
[ext_resource type="Texture2D" uid="uid://bakt8g0niypa8" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzn0.png" id="8_v78ry"]
[ext_resource type="Texture2D" uid="uid://vurwyo2645hb" path="res://Sprites/AutoShotgunGuy/SPRITES/asgza1.png" id="9_qb32f"]
[ext_resource type="Texture2D" uid="uid://cjwnpu17d3ymm" path="res://Sprites/Horn Beast/SPRITES/hbsta1.png" id="10_wndrn"]
[ext_resource type="Texture2D" uid="uid://vhlpbddqekul" path="res://Sprites/Horn Beast/SPRITES/hbstb1.png" id="11_5l1w1"]
[ext_resource type="Texture2D" uid="uid://c4ngs4o5utvy4" path="res://Sprites/Horn Beast/SPRITES/hbstc1.png" id="12_iofpq"]
[ext_resource type="Texture2D" uid="uid://b71rg44sev70r" path="res://Sprites/Horn Beast/SPRITES/hbstd1.png" id="13_lt2cq"]
[ext_resource type="Texture2D" uid="uid://cn1ej4ca568wy" path="res://Sprites/Horn Beast/SPRITES/hbstg0.png" id="14_7p3v0"]
[ext_resource type="Texture2D" uid="uid://dmei5eeprvnij" path="res://Sprites/Horn Beast/SPRITES/hbsth0.png" id="15_6xs0s"]
[ext_resource type="Texture2D" uid="uid://c61wfqx127m8h" path="res://Sprites/Horn Beast/SPRITES/hbsti0.png" id="16_pifhe"]
[ext_resource type="Texture2D" uid="uid://bo7kt354supl4" path="res://Sprites/Horn Beast/SPRITES/hbstj0.png" id="17_nou43"]
[ext_resource type="Texture2D" uid="uid://xqd1dhjaiown" path="res://Sprites/Horn Beast/SPRITES/hbstk0.png" id="18_wndrn"]
[ext_resource type="Texture2D" uid="uid://dma34m6e8y0sr" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzg1.png" id="22_nw0hp"]
[ext_resource type="Texture2D" uid="uid://y2j8xut4mrmm" path="res://Sprites/AutoShotgunGuy/SPRITES/asgze1.png" id="23_je8am"]
[ext_resource type="Texture2D" uid="uid://dq3q48pumar4s" path="res://Sprites/AutoShotgunGuy/SPRITES/asgzf1.png" id="24_5doig"]

[sub_resource type="BoxShape3D" id="BoxShape3D_01wab"]
size = Vector3(1, 2, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5s6p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wndrn")
}, {
"duration": 1.0,
"texture": ExtResource("3_5l1w1")
}, {
"duration": 1.0,
"texture": ExtResource("4_iofpq")
}, {
"duration": 1.0,
"texture": ExtResource("5_lt2cq")
}, {
"duration": 1.0,
"texture": ExtResource("6_6hfek")
}, {
"duration": 1.0,
"texture": ExtResource("7_saubl")
}, {
"duration": 1.0,
"texture": ExtResource("8_v78ry")
}],
"loop": false,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_qb32f")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_wndrn")
}, {
"duration": 1.0,
"texture": ExtResource("11_5l1w1")
}, {
"duration": 1.0,
"texture": ExtResource("12_iofpq")
}, {
"duration": 1.0,
"texture": ExtResource("13_lt2cq")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_7p3v0")
}, {
"duration": 1.0,
"texture": ExtResource("15_6xs0s")
}, {
"duration": 1.0,
"texture": ExtResource("16_pifhe")
}, {
"duration": 1.0,
"texture": ExtResource("17_nou43")
}, {
"duration": 1.0,
"texture": ExtResource("18_wndrn")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_nw0hp")
}, {
"duration": 1.0,
"texture": ExtResource("22_nw0hp")
}, {
"duration": 1.0,
"texture": ExtResource("22_nw0hp")
}, {
"duration": 1.0,
"texture": ExtResource("22_nw0hp")
}],
"loop": true,
"name": &"hit",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_je8am")
}, {
"duration": 1.0,
"texture": ExtResource("24_5doig")
}, {
"duration": 1.0,
"texture": ExtResource("23_je8am")
}],
"loop": false,
"name": &"shoot",
"speed": 2.0
}]

[node name="Node3D" type="CharacterBody3D" groups=["Enemy"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
motion_mode = 1
script = ExtResource("1_nou43")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
shape = SubResource("BoxShape3D_01wab")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.196605, 0)
sprite_frames = SubResource("SpriteFrames_w5s6p")
animation = &"Walk"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.189617, 0)
target_position = Vector3(0, 0, -20)
debug_shape_custom_color = Color(0.85159, 0.204878, 0.171332, 1)

[node name="ChargeTime" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite3D" to="." method="_on_animated_sprite_3d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ChargeTime" to="." method="_on_charge_time_timeout"]
